[gd_scene load_steps=16 format=3 uid="uid://btvb5400v1yyr"]

[ext_resource type="Texture2D" uid="uid://bkry1rl40rve5" path="res://Store/Assets/Store Background.png" id="1_jd1dj"]
[ext_resource type="Script" path="res://Store/store.gd" id="1_waq3s"]
[ext_resource type="Texture2D" uid="uid://hxwlyo7e8ovw" path="res://Systems/Life Support/Assets/Algae.png" id="2_f31xe"]
[ext_resource type="BitMap" uid="uid://20vt37lyi2ai" path="res://Store/Assets/Top left bitmask.png" id="2_k7hq7"]
[ext_resource type="BitMap" uid="uid://be80amnlfflo1" path="res://Store/Assets/Top right bitmask.png" id="3_2ow5o"]
[ext_resource type="Texture2D" uid="uid://csxi5m2cuofu7" path="res://Systems/Life Support/Assets/Algae Outline.png" id="3_sl458"]
[ext_resource type="BitMap" uid="uid://b74dxr815fhnb" path="res://Store/Assets/Bottom right bitmask.png" id="4_fdqj1"]
[ext_resource type="Texture2D" uid="uid://dmxj84rvqsyqo" path="res://Systems/Engines/Assets/Engine Cell.png" id="4_x70c4"]
[ext_resource type="Texture2D" uid="uid://205aaekh6lm1" path="res://Systems/Engines/Assets/Engine Cell Outline.png" id="5_5kjh2"]
[ext_resource type="BitMap" uid="uid://bm0y1rivtf1wm" path="res://Store/Assets/Bottom left bitmask.png" id="5_10xce"]
[ext_resource type="Texture2D" uid="uid://6xtels7glrj0" path="res://Systems/Hull/Assets/Patch.png" id="5_sowqq"]
[ext_resource type="Texture2D" uid="uid://cqi86ps2dgf2e" path="res://Systems/Hull/Assets/Patch Outline.png" id="7_hk3ls"]
[ext_resource type="Texture2D" uid="uid://bx2imxchgrcyx" path="res://Store/Assets/Life support upgrade 1.png" id="10_g2lqu"]
[ext_resource type="Texture2D" uid="uid://4ejxauyckmjt" path="res://Store/Assets/Engines upgrade.png" id="11_furb3"]
[ext_resource type="Texture2D" uid="uid://bpgm0k48bajf5" path="res://Store/Assets/Hull upgrade 1.png" id="13_fjrrf"]

[node name="Store" type="Node2D"]
script = ExtResource("1_waq3s")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_jd1dj")
centered = false

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 704.0
offset_bottom = 540.0

[node name="Algae Button" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 42.0
offset_top = 413.0
offset_right = 163.0
offset_bottom = 493.0
focus_mode = 0
flat = true

[node name="Background ColorRect" type="ColorRect" parent="Buttons/Algae Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0546875, 0.0546875, 0.0546875, 1)

[node name="Sprite" type="Sprite2D" parent="Buttons/Algae Button"]
position = Vector2(28.5, 8)
scale = Vector2(2, 2)
texture = ExtResource("2_f31xe")
centered = false

[node name="Outline" type="Sprite2D" parent="Buttons/Algae Button/Sprite"]
visible = false
texture = ExtResource("3_sl458")
centered = false

[node name="Fuel Button" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 198.0
offset_top = 413.0
offset_right = 329.0
offset_bottom = 493.0
focus_mode = 0
flat = true

[node name="Background ColorRect" type="ColorRect" parent="Buttons/Fuel Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0546875, 0.0546875, 0.0546875, 1)

[node name="Sprite" type="Sprite2D" parent="Buttons/Fuel Button"]
position = Vector2(49.5, 8)
scale = Vector2(2, 2)
texture = ExtResource("4_x70c4")
centered = false

[node name="ColorRect" type="ColorRect" parent="Buttons/Fuel Button/Sprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -9.0
offset_right = 2.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.866667, 0, 1)

[node name="Outline" type="Sprite2D" parent="Buttons/Fuel Button/Sprite"]
visible = false
texture = ExtResource("5_5kjh2")
centered = false

[node name="Coolant Button" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 375.0
offset_top = 413.0
offset_right = 506.0
offset_bottom = 493.0
focus_mode = 0
flat = true

[node name="Background ColorRect" type="ColorRect" parent="Buttons/Coolant Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0546875, 0.0546875, 0.0546875, 1)

[node name="Sprite" type="Sprite2D" parent="Buttons/Coolant Button"]
position = Vector2(49.5, 8)
scale = Vector2(2, 2)
texture = ExtResource("4_x70c4")
centered = false

[node name="ColorRect" type="ColorRect" parent="Buttons/Coolant Button/Sprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -9.0
offset_right = 2.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.505882, 1, 1)

[node name="Outline" type="Sprite2D" parent="Buttons/Coolant Button/Sprite"]
visible = false
texture = ExtResource("5_5kjh2")
centered = false

[node name="Patch Button" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 541.0
offset_top = 413.0
offset_right = 662.0
offset_bottom = 493.0
focus_mode = 0
flat = true

[node name="Background ColorRect" type="ColorRect" parent="Buttons/Patch Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0546875, 0.0546875, 0.0546875, 1)

[node name="Sprite" type="Sprite2D" parent="Buttons/Patch Button"]
position = Vector2(60, 40)
scale = Vector2(2, 2)
texture = ExtResource("5_sowqq")
region_enabled = true
region_rect = Rect2(15, 15, 18, 18)

[node name="Outline" type="Sprite2D" parent="Buttons/Patch Button/Sprite"]
visible = false
texture = ExtResource("7_hk3ls")

[node name="Top Left Button" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 39.0
offset_top = 23.0
offset_right = 237.0
offset_bottom = 164.0
texture_click_mask = ExtResource("2_k7hq7")

[node name="Sprite" type="Sprite2D" parent="Buttons/Top Left Button"]
position = Vector2(99, 85)
texture = ExtResource("10_g2lqu")

[node name="Top Middle Button" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 263.0
offset_top = 21.0
offset_right = 441.0
offset_bottom = 171.0
flat = true

[node name="Sprite" type="Sprite2D" parent="Buttons/Top Middle Button"]
position = Vector2(89, 75)
texture = ExtResource("11_furb3")

[node name="Top Right Button" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 467.0
offset_top = 23.0
offset_right = 665.0
offset_bottom = 164.0
texture_click_mask = ExtResource("3_2ow5o")

[node name="Sprite" type="Sprite2D" parent="Buttons/Top Right Button"]
position = Vector2(99, 85)
texture = ExtResource("13_fjrrf")

[node name="Bottom Left Button" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 35.0
offset_top = 199.0
offset_right = 235.0
offset_bottom = 357.0
texture_click_mask = ExtResource("5_10xce")

[node name="Sprite" type="Sprite2D" parent="Buttons/Bottom Left Button"]
position = Vector2(100, 55)

[node name="Bottom Middle Button" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 262.0
offset_top = 217.0
offset_right = 442.0
offset_bottom = 338.0
flat = true

[node name="Sprite" type="Sprite2D" parent="Buttons/Bottom Middle Button"]
position = Vector2(90, 60.5)

[node name="Bottom Right Button" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 469.0
offset_top = 199.0
offset_right = 669.0
offset_bottom = 357.0
texture_click_mask = ExtResource("4_fdqj1")

[node name="Sprite" type="Sprite2D" parent="Buttons/Bottom Right Button"]
position = Vector2(100, 55)

[connection signal="mouse_entered" from="Buttons/Algae Button" to="." method="_on_algae_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Algae Button" to="." method="_on_algae_button_mouse_exited"]
[connection signal="pressed" from="Buttons/Algae Button" to="." method="_on_algae_button_pressed"]
[connection signal="mouse_entered" from="Buttons/Fuel Button" to="." method="_on_fuel_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Fuel Button" to="." method="_on_fuel_button_mouse_exited"]
[connection signal="pressed" from="Buttons/Fuel Button" to="." method="_on_fuel_button_pressed"]
[connection signal="mouse_entered" from="Buttons/Coolant Button" to="." method="_on_coolant_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Coolant Button" to="." method="_on_coolant_button_mouse_exited"]
[connection signal="pressed" from="Buttons/Coolant Button" to="." method="_on_coolant_button_pressed"]
[connection signal="mouse_entered" from="Buttons/Patch Button" to="." method="_on_patch_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Patch Button" to="." method="_on_patch_button_mouse_exited"]
[connection signal="pressed" from="Buttons/Patch Button" to="." method="_on_patch_button_pressed"]
